KSENROLL-7376 KRAD bug workaround to make ACAL overview visible on Term tab
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@50509 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -467,7 +467,7 @@ a {
     float: right;
 }
 
-.ks-header-list¨{
+.ks-header-list {
     list-style: none;
     float: right;
 }
@@ -887,4 +887,9 @@ div#Uif-ApplicationHeader-Wrapper{
 
 #ks-uif-secondaryActionButton.uif-boxLayoutHorizontalItem ~ .uif-boxLayoutHorizontalItem{
     float: right  !important;
+}
+
+.ks-krad-tab-gridgroup-fix th,
+.ks-krad-tab-gridgroup-fix td {
+    display: table-cell !important;
 }
